# hai-dataeng-tech-task

./: .gitignore  Makefile  README.md  pyproject.toml  reassemble_dicom.py  reassemble_dicom_from_sop_uid.py  requirements.txt
data/: generate.py  sample.j2c  sample.json
data/images/: images1.tar  images2.tar  images3.tar
data/text/: text1.tar  text2.tar  text3.tar
